Restructure auth module and generate new docs file
