# docs/swagger.json
@@ -242,7 +242,7 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Create authentication token",
+                "summary": "CreateUseCase authentication token",
                 "parameters": [
                     {
                         "description": "Request body",
@@ -284,7 +284,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/app.CreateUserRequest"
+                            "$ref": "#/definitions/entity.CreateUserRequest"
                         }
                     }
                 ],
@@ -332,20 +332,6 @@
         }
     },
     "definitions": {
-        "app.CreateUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "database.Movie": {
             "type": "object",
             "properties": {
@@ -400,6 +386,20 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
